# personal_life_manager

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.claude/skills/: weekly-review
docs/: pi-deployment.md
resources/: plm-init.md  weekly-review.md
resources/weekly-review/: SKILL.md
src/plm/: __init__.py
src/plm/mcp_server/: __init__.py  server.py
src/plm/models/: __init__.py  board.py  card.py  column.py  inbox.py  planning.py  profile.py  project.py
src/plm/storage/: __init__.py  store.py
src/plm/web/: __init__.py  app.py
src/plm/web/static/: service-worker.js
src/plm/web/templates/: base.html  board.html  inbox.html  login.html  manifest.json  planning.html  profile.html  projects.html
tests/: __init__.py  test_mcp_tools.py  test_models.py  test_storage.py  test_web_board.py  test_web_inbox_profile.py  test_web_planning.py  test_web_projects.py
