[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-life-manager"
version = "0.1.0"
description = "MCP server + web UI for personal productivity (Kanban, planning, inbox, profile)"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

# Entry points so `plm-mcp` and `plm-web` work after `pip install -e .`
[project.scripts]
plm-mcp = "plm.mcp_server.server:main"
plm-web = "plm.web.app:main"

[tool.hatch.build.targets.wheel]
# src layout: tell hatchling where the packages live
packages = ["src/plm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
