[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-life-manager"
version = "0.1.0"
description = "MCP server + web UI for personal productivity (Kanban, planning, inbox, profile)"
requires-python = ">=3.12"
dependencies = [
    # fastmcp is the upstream of mcp.server.fastmcp (absorbed by Anthropic); the
    # standalone package adds HTTP transport + auth providers (AuthKit) that we need
    # for the remote MCP server. mcp itself stays as a transitive dependency.
    # Pinned to 3.1.1: 3.2.x added RFC 8707 audience validation that requires
    # WorkOS Resource Indicators to be enabled in the Dashboard — skip until then.
    "fastmcp==3.1.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.12",
    # itsdangerous: signs session cookies via SessionMiddleware (tamper-proof without
    # a server-side session store; starlette pulls it in already, explicit pin for clarity)
    "itsdangerous>=2.0",
    # watchdog: file-system event watcher used by the SSE live-reload feature (8d).
    # On Linux it uses inotify — zero polling, instant notifications.
    "watchdog>=3.0.0",
    # markdown: converts the BehavioralProfile content (free-form markdown) to HTML
    # for display in the Profile page.  Server-side rendering keeps the template
    # simple and avoids shipping a JS markdown library to the browser.
    "markdown>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

# Entry points so `plm-mcp`, `plm-mcp-http`, and `plm-web` work after install.
# plm-mcp      — stdio transport, local Claude Code use
# plm-mcp-http — Streamable HTTP transport, remote Claude.ai use (needs WorkOS env vars)
[project.scripts]
plm-mcp = "plm.mcp_server.server:main_stdio"
plm-mcp-http = "plm.mcp_server.server:main_http"
plm-web = "plm.web.app:main"

[tool.hatch.build.targets.wheel]
# src layout: tell hatchling where the packages live
packages = ["src/plm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
